PROJECT(ktools)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(ITK 4 REQUIRED)
INCLUDE(${ITK_USE_FILE})

SET(BUILD_REORIENT False CACHE BOOL "Compile reorient")

SET(PI_LIBS_SOURCE piImageIO.h piOptions.cpp piOptions.h)

IF(${BUILD_REORIENT})
ADD_EXECUTABLE(kflipF kflip.cpp ${PI_LIBS_SOURCE})
SET_TARGET_PROPERTIES(kflipF PROPERTIES COMPILE_FLAGS "-DPIXEL_TYPE=float")
TARGET_LINK_LIBRARIES(kflipF ${ITK_LIBRARIES})

ADD_EXECUTABLE(korient korient.cpp ${PI_LIBS_SOURCE})
SET_TARGET_PROPERTIES(korient PROPERTIES COMPILE_FLAGS "-DPIXEL_TYPE=short")
TARGET_LINK_LIBRARIES(korient ${ITK_LIBRARIES})
ENDIF(${BUILD_REORIENT})
