PROJECT(ktools)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(ITK 4 REQUIRED)
INCLUDE(${ITK_USE_FILE})

SET(BUILD_KORIENT False CACHE BOOL "Compile korient")
SET(BUILD_KCALC False CACHE BOOL "Compile kcalc")

INCLUDE_DIRECTORIES(muparser)
FILE(GLOB muparser_SRC "muparser/*.cpp")
FILE(GLOB pi_SRC "pi*")

IF(${BUILD_KORIENT})
ADD_EXECUTABLE(korient korient.cpp piOptions.cpp piOptions.h)
SET_TARGET_PROPERTIES(korient PROPERTIES COMPILE_FLAGS "-DPIXEL_TYPE=float")
TARGET_LINK_LIBRARIES(korient ${ITK_LIBRARIES})
ENDIF(${BUILD_KORIENT})

IF(${BUILD_KCALC})
ADD_EXECUTABLE(kcalc kcalc.cpp piOptions.cpp piOptions.h ${muparser_SRC} PixelMathImageFilter.h PixelMathImageFilter.hxx)
SET_TARGET_PROPERTIES(kcalc PROPERTIES COMPILE_FLAGS "-DPIXEL_TYPE=float")
TARGET_LINK_LIBRARIES(kcalc ${ITK_LIBRARIES})
ENDIF(${BUILD_KCALC})
