PROJECT(ScriptRunner)
cmake_minimum_required(VERSION 2.8)

FIND_PACKAGE(Qt REQUIRED)
INCLUDE(${QT_USE_FILE})

SET (QT_HEADERS mainwindow.h)
SET (QT_SOURCES mainwindow.cpp)
QT4_WRAP_CPP(QT_MOC_HEADERS ${QT_HEADERS})
QT4_WRAP_UI(QT_UI_FILES mainwindow.ui)
#QT4_ADD_RESOURCES(QT_BVIEW_RCC bigViewWindow.qrc simpleSliceViewer.qrc)

ADD_DEFINITIONS(${QT_DEFINITIONS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
#ADD_EXECUTABLE(scriptRunner main.cpp ${QT_HEADERS} ${QT_SOURCES} ${QT_MOC_HEADERS} ${QT_UI_FILES} ${QT_RCC})
ADD_EXECUTABLE(scriptRunner main.cpp ${QT_HEADERS} ${QT_SOURCES} ${QT_MOC_HEADERS} ${QT_UI_FILES})
TARGET_LINK_LIBRARIES(scriptRunner ${QT_LIBRARIES})
